# SEWeibo

./: README.md
conf/: setting.conf
data/: emotionScore.lib  emotion_words.txt  newoffset.lib  offset.lib
data/words/: index0.txt  index1.txt  index2.txt  index3.txt  index4.txt  index5.txt
frontend/: 前端搭建步骤.txt
frontend/php_TCP/: index.html  php_client.php  site.css
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  Event.cpp  Event.h  SplitTool.hpp  WordQuery.cpp  WordQuery.h  server.cpp
src/dictTree/: dictTree.cpp  dictTree.h
src/log/: Log.cpp  Log.h  SearchLog
src/net/: Acceptor.cpp  Acceptor.h  EventLoop.cpp  EventLoop.h  InetAddress.cpp  InetAddress.h  Noncopyable.h  Socket.cpp  Socket.h  SocketIO.cpp  SocketIO.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
src/redis/: RedisClient.cpp  RedisClient.h
src/threadpool/: Condition.h  MutexLock.h  Noncopyable.h  TaskQueue.cpp  TaskQueue.h  Thread.cpp  Thread.h  Threadpool.cpp  Threadpool.h
